feat: update default target language from 'zh' to 'Chinese' in frontend

--- a/cookbook/PC/live-translate/frontend/public/index.html
+++ b/cookbook/PC/live-translate/frontend/public/index.html
@@ -377,7 +377,7 @@
             audioContext: null,
             scriptProcessor: null,
             sourceNode: null,
-            targetLanguage: 'zh',
+            targetLanguage: 'Chinese',
             currentSegment: [],
             transcriptionBuffer: [],
             socket: null,
